syntax = "proto3";

option go_package = "./;rulexrpc";
option java_multiple_files = false;
option java_package = "rulexrpc";
option java_outer_classname = "RulexRpcService";

package rulexrpc;

service RulexRpc {
  rpc Work (Data) returns (Response) {}
}

message Data {
  string value = 1;
}

message Response {
  int32 code = 1;
  string message = 2;
}
