syntax = "proto3";
option go_package = "./;rulexrpc";
option java_multiple_files = false;
option java_package = "rulexrpc";
option java_outer_classname = "XStream";

package rulexrpc;
//
// 自定义编解码器, 使用GRPC协议通信
//
service Codec {
  // 编码
  rpc Decode (CodecRequest) returns (CodecResponse) {}
  // 解码
  rpc Encode (CodecRequest) returns (CodecResponse) {}
}

message CodecRequest {
  bytes value = 1;
}

message CodecResponse {
  int32 code = 1;
  string message = 2;
  bytes data = 3;
}
